(feat) cards de consultoria

--- a/index.html
+++ b/index.html
@@ -141,7 +141,6 @@
       <!-- RECOMMENDATION -->
       <section>
         <div class="container">
-
           <div class="section-title">
             <h1 class="text-center color-brown">
               Para quem indicamos a consultoria
@@ -197,171 +196,145 @@
       </section>
       <!-- END RECOMMENDATION -->
 
-      <!-- Etapas da consultoria -->
+      <!-- CONSULTANCY -->
       <section class="bg-black">
-        <div class="container mt-4">
-          <div
-            class="d-flex flex-column justify-content-center align-items-center mb-5"
-          >
+        <div class="container">
+          <div class="section-title">
             <h1 class="text-center color-brown">
               As etapas da sua consultoria:
             </h1>
-            <p class="color-white">
+            <p class="text-center color-white">
               Nossa consultoria é um serviço rápido e prático.
             </p>
           </div>
 
-          <div class="row mt-4">
-            <div class="col-lg-4">
-              <div class="card">
-                <div
-                  class="card-body d-flex flex-column justify-content-center align-items-center"
-                >
-                  <div class="consultancy-img">
-                    <img
-                      class="image-fluid-contain"
-                      src="./image/pre-briefing.jpg"
-                    />
-                  </div>
-                  <h5 class="card-title text-uppercase color-brown">
-                    1. PRÉ BRIEFING
-                  </h5>
-                  <p class="card-text">
-                    Na primeira fase do nosso processo, trabalhamos juntos para
-                    entender seus desejos e necessidades. Por meio de um
-                    questionário, coletamos informações importantes sobre sua
-                    visão, estilo, preferências de cores, orçamento e muito
-                    mais.
-                  </p>
+          <div class="direction">
+            <div class="w-4 consul-colummn">
+              <div class="consult-card">
+                <div class="consult-image">
+                  <img
+                    class="image-fluid-contain"
+                    src="./image/pre-briefing.jpg"
+                  />
                 </div>
+                <h5 class="consult-title text-uppercase color-brown">
+                  1. PRÉ BRIEFING
+                </h5>
+                <p class="consult-text">
+                  Na primeira fase do nosso processo, trabalhamos juntos para
+                  entender seus desejos e necessidades. Por meio de um
+                  questionário, coletamos informações importantes sobre sua
+                  visão, estilo, preferências de cores, orçamento e muito mais.
+                </p>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="card">
-                <div
-                  class="card-body d-flex flex-column justify-content-center align-items-center"
-                >
-                  <div class="consultancy-img">
-                    <img
-                      class="image-fluid-contain"
-                      src="./image/meeting.png"
-                    />
-                  </div>
-                  <h5 class="card-title text-uppercase color-brown">
-                    2. REUNIÃO DE BRIEFING
-                  </h5>
-                  <p class="card-text">
-                    Com base nas informações que coletamos, marcaremos uma
-                    reunião por vídeo chamada para conversarmos sobre suas
-                    necessidades e desejos para o ambiente. Além disso,
-                    forneceremos orientações sobre como tirar as medidas do
-                    espaço.
-                  </p>
+            <div class="w-4 consul-colummn">
+              <div class="consult-card">
+                <div class="consult-image">
+                  <img
+                    class="image-fluid-contain"
+                    src="./image/meeting.png"
+                  />
                 </div>
+                <h5 class="consult-title text-uppercase color-brown">
+                  2. REUNIÃO DE BRIEFING
+                </h5>
+                <p class="consult-text">
+                  Com base nas informações que coletamos, marcaremos uma
+                  reunião por vídeo chamada para conversarmos sobre suas
+                  necessidades e desejos para o ambiente. Além disso,
+                  forneceremos orientações sobre como tirar as medidas do
+                  espaço.
+                </p>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="card">
-                <div
-                  class="card-body d-flex flex-column justify-content-center align-items-center"
-                >
-                  <div class="consultancy-img">
-                    <img
-                      class="image-fluid-contain"
-                      src="./image/creating.jpg"
-                    />
-                  </div>
-                  <h5 class="card-title text-uppercase color-brown">
-                    3. CRIAÇÃO
-                  </h5>
-                  <p class="card-text">
-                    Esta é a etapa em que iremos começar a desenvolver sua
-                    consultoria personalizada. Criaremos imagens realistas,
-                    permitindo que você visualize com clareza como todos os
-                    detalhes foram cuidadosamente planejados para o seu espaço.
-                  </p>
+            <div class="w-4 consul-colummn">
+              <div class="consult-card">
+                <div class="consult-image">
+                  <img
+                    class="image-fluid-contain"
+                    src="./image/creating.jpg"
+                  />
                 </div>
+                <h5 class="consult-title text-uppercase color-brown">
+                  3. CRIAÇÃO
+                </h5>
+                <p class="consult-text">
+                  Esta é a etapa em que iremos começar a desenvolver sua
+                  consultoria personalizada. Criaremos imagens realistas,
+                  permitindo que você visualize com clareza como todos os
+                  detalhes foram cuidadosamente planejados para o seu espaço.
+                </p>
               </div>
             </div>
           </div>
 
-          <div class="row mt-4">
-            <div class="col-lg-4">
-              <div class="card">
-                <div
-                  class="card-body d-flex flex-column justify-content-center align-items-center"
-                >
-                  <div class="consultancy-img">
-                    <img
-                      class="image-fluid-contain"
-                      src="./image/pre-briefing.jpg"
-                    />
-                  </div>
-                  <h5 class="card-title text-uppercase color-brown">
-                    4.ENTREGA 1
-                  </h5>
-                  <p class="card-text">
-                    Hora da primeira entrega da sua consultoria. Durante essa
-                    fase, iremos apresentar o conceito, o layout ideal,
-                    moodboard e perspectivas em 3D realistas. Você tem o direito
-                    a uma revisão para garantir que o projeto atenda às suas
-                    expectativas
-                  </p>
+          <div class="direction">
+            <div class="w-4 consul-colummn">
+              <div class="consult-card">
+                <div class="consult-image">
+                  <img
+                    class="image-fluid-contain"
+                    src="./image/pre-briefing.jpg"
+                  />
                 </div>
+                <h5 class="consult-title text-uppercase color-brown">
+                  4.ENTREGA 1
+                </h5>
+                <p class="consult-text">
+                  Hora da primeira entrega da sua consultoria. Durante essa
+                  fase, iremos apresentar o conceito, o layout ideal,
+                  moodboard e perspectivas em 3D realistas. Você tem o direito
+                  a uma revisão para garantir que o projeto atenda às suas
+                  expectativas
+                </p>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="card">
-                <div
-                  class="card-body d-flex flex-column justify-content-center align-items-center"
-                >
-                  <div class="consultancy-img">
-                    <img
-                      class="image-fluid-contain"
-                      src="./image/pre-briefing.jpg"
-                    />
-                  </div>
-                  <h5 class="card-title text-uppercase color-brown">
-                    5.ENTREGA FINAL DA SUA CONSULTORIA
-                  </h5>
-                  <p class="card-text">
-                    Após a aprovação da primeira etapa da consultoria, iremos
-                    criar um Caderno de Consultoria em formato PDF. Este arquivo
-                    conterá todas as informações e especificações do seu
-                    ambiente, juntamente com uma lista de compras completa dos
-                    itens recomendados no seu projeto de consultoria.
-                  </p>
+            <div class="w-4 consul-colummn">
+              <div class="consult-card">
+                <div class="consult-image">
+                  <img
+                    class="image-fluid-contain"
+                    src="./image/pre-briefing.jpg"
+                  />
                 </div>
+                <h5 class="consult-title text-uppercase color-brown">
+                  5.ENTREGA FINAL DA SUA CONSULTORIA
+                </h5>
+                <p class="consult-text">
+                  Após a aprovação da primeira etapa da consultoria, iremos
+                  criar um Caderno de Consultoria em formato PDF. Este arquivo
+                  conterá todas as informações e especificações do seu
+                  ambiente, juntamente com uma lista de compras completa dos
+                  itens recomendados no seu projeto de consultoria.
+                </p>
               </div>
             </div>
-            <div class="col-lg-4">
-              <div class="card">
-                <div
-                  class="card-body d-flex flex-column justify-content-center align-items-center"
-                >
-                  <div class="consultancy-img">
-                    <img
-                      class="image-fluid-contain"
-                      src="./image/pre-briefing.jpg"
-                    />
-                  </div>
-                  <h5 class="card-title text-uppercase color-brown">
-                    6.HORA DA TRANSFORMAÇÃO
-                  </h5>
-                  <p class="card-text">
-                    Chegou a hora de transformar seu sonho em realidade!
-                    Estaremos disponíveis para oferecer suporte online e
-                    responder quaisquer dúvidas durante a implementação da sua
-                    consultoria personalizada. Não se esqueça de compartilhar o
-                    processo conosco. Se precisar de ajuda, estamos aqui para
-                    ajudá-la a alcançar o resultado final que você deseja
-                  </p>
+            <div class="w-4 consul-colummn">
+              <div class="consult-card">
+                <div class="consult-image">
+                  <img
+                    class="image-fluid-contain"
+                    src="./image/pre-briefing.jpg"
+                  />
                 </div>
+                <h5 class="consult-title text-uppercase color-brown">
+                  6.HORA DA TRANSFORMAÇÃO
+                </h5>
+                <p class="consult-text">
+                  Chegou a hora de transformar seu sonho em realidade!
+                  Estaremos disponíveis para oferecer suporte online e
+                  responder quaisquer dúvidas durante a implementação da sua
+                  consultoria personalizada. Não se esqueça de compartilhar o
+                  processo conosco. Se precisar de ajuda, estamos aqui para
+                  ajudá-la a alcançar o resultado final que você deseja
+                </p>
               </div>
             </div>
           </div>
         </div>
       </section>
+      <!-- END CONSULTANCY -->
 
       <!-- Sobre -->
       <section class="bg-brown">
