(refactor) informações do bg-video

--- a/index.html
+++ b/index.html
@@ -3,14 +3,6 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Font Awesome icons (free version)-->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-      integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
     <!-- Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -20,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="./css/bootstrap.min.css" />
+    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css" /> -->
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Mayana Favacho - Consultoria Online</title>
   </head>
@@ -31,28 +23,28 @@
         <source src="assets/mp4/bg.mp4" type="video/mp4" />
       </video>
       <div class="head-info">
-        <h1 class="text-uppercase mb-4 color-white">
+        <h1 class="text-uppercase color-white">
           Tudo que você precisa para ter um ambiente do seu jeito
         </h1>
-        <p class="color-white mb-4 font-size-25">
+        <p class="color-white">
           Consultoria 100% Online: Prática e rápida, economizando seu tempo e
           orçamento
         </p>
         <a
-          class="btn btn-primary btn-primary-brow mb-4 animation-pulse"
+          class="btn btn-brown animation-pulse"
           href="#"
           >Conheça Nossos Planos</a
         >
-        <p class="color-white font-size-25">Até 12x no Cartão de Crédito</p>
-        <p class="color-white font-size-25">Planos a Partir de 1 Ambiente</p>
-        <p class="color-white font-size-25">
+        <p class="color-white">Até 12x no Cartão de Crédito</p>
+        <p class="color-white">Planos a Partir de 1 Ambiente</p>
+        <p class="color-white">
           Ideal para todos os tipos de casas e apartamentos
         </p>
       </div>
     </div>
 
     <!-- WRAPPER -->
-    <main class="wrapper">
+    <!-- <main class="wrapper">
       <section class="bg-black">
         <div class="container">
           <div class="direction">
@@ -100,7 +92,7 @@
         </div>
       </section>
 
-      <!-- ENVIRONMENT -->
+   
       <section class="bg-brown">
         <div class="container">
           <div class="direction">
@@ -136,9 +128,9 @@
           </div>
         </div>
       </section>
-      <!-- END ENVIROMENT -->
 
-      <!-- RECOMMENDATION -->
+
+
       <section>
         <div class="container">
           <div class="section-title">
@@ -194,9 +186,9 @@
           </div>
         </div>
       </section>
-      <!-- END RECOMMENDATION -->
 
-      <!-- CONSULTANCY -->
+
+
       <section class="bg-black">
         <div class="container">
           <div class="section-title">
@@ -334,9 +326,9 @@
           </div>
         </div>
       </section>
-      <!-- END CONSULTANCY -->
 
-      <!-- Sobre -->
+
+
       <section class="bg-brown">
         <div class="container">
           <div class="row">
@@ -425,7 +417,7 @@
         </div>
       </section>
 
-      <!-- Aviso -->
+
       <section class="bg-black p-5">
         <div class="container">
           <div
@@ -457,7 +449,7 @@
         </div>
       </section>
 
-      <!-- Duvidas frequentes -->
+
       <section class="bg-brown p-5">
         <div class="container">
           <div class="element-column-center mb-5">
@@ -579,9 +571,9 @@
           </div>
         </div>
       </section>
-    </main>
+    </main> -->
 
-    <div class="socia-group-floating">
+    <!-- <div class="socia-group-floating">
       <div class="round-button bg-instagram">
         <a
           class="sm-link"
@@ -600,9 +592,9 @@
           <i class="fa-brands fa-whatsapp"></i>
         </a>
       </div>
-    </div>
+    </div> -->
 
-    <footer class="p-5 parallax">
+    <!-- <footer class="p-5 parallax">
       <div class="container">
         <div
           class="d-flex flex-column justify-content-center align-items-center"
@@ -658,7 +650,7 @@
           >
         </div>
       </div>
-    </footer>
+    </footer> -->
 
     <script src="./js/bootstrap.min.js"></script>
     <script>
