(refactor) seção de frustração

--- a/index.html
+++ b/index.html
@@ -30,9 +30,7 @@
           Consultoria 100% Online: Prática e rápida, economizando seu tempo e
           orçamento
         </p>
-        <a
-          class="btn btn-brown animation-pulse"
-          href="#"
+        <a class="btn btn-brown animation-pulse" href="#"
           >Conheça Nossos Planos</a
         >
         <p class="color-white">Até 12x no Cartão de Crédito</p>
@@ -44,7 +42,7 @@
     </div>
 
     <!-- WRAPPER -->
-    <!-- <main class="wrapper">
+    <main class="wrapper">
       <section class="bg-black">
         <div class="container">
           <div class="direction">
@@ -56,7 +54,7 @@
               </div>
             </div>
             <div class="w-6 felt-desc">
-              <h1 class="color-brown">Você já se sentiu assim?</h1>
+              <h1 class="color-brown text-uppercase">Você já se sentiu assim?</h1>
               <p class="color-white">
                 Me sinto
                 <span class="text-uppercase font-italic font-bold">
@@ -86,14 +84,16 @@
                 >, pois preciso organizar o quarto para chegada do meu filho,
                 com soluções rápidas e práticas.
               </p>
-              <h2 class="color-brown">Então essa consultoria é para você!!!</h2>
+              <h2 class="color-brown text-uppercase">Então essa consultoria é para você!!!</h2>
+              <a class="btn btn-brown animation-pulse" href="#"
+                >Faça agora sua consultoria</a
+              >
             </div>
           </div>
         </div>
       </section>
 
-   
-      <section class="bg-brown">
+      <!-- <section class="bg-brown">
         <div class="container">
           <div class="direction">
             <div class="w-6 env-desc">
@@ -128,8 +128,6 @@
           </div>
         </div>
       </section>
-
-
 
       <section>
         <div class="container">
@@ -186,8 +184,6 @@
           </div>
         </div>
       </section>
-
-
 
       <section class="bg-black">
         <div class="container">
@@ -327,8 +323,6 @@
         </div>
       </section>
 
-
-
       <section class="bg-brown">
         <div class="container">
           <div class="row">
@@ -417,7 +411,6 @@
         </div>
       </section>
 
-
       <section class="bg-black p-5">
         <div class="container">
           <div
@@ -448,7 +441,6 @@
           </div>
         </div>
       </section>
-
 
       <section class="bg-brown p-5">
         <div class="container">
@@ -570,8 +562,8 @@
             </div>
           </div>
         </div>
-      </section>
-    </main> -->
+      </section> -->
+    </main>
 
     <!-- <div class="socia-group-floating">
       <div class="round-button bg-instagram">
