(fix) imagem não respovisa corrigida

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </div>
       </section>
 
-      <!-- <section class="bg-brown">
+      <section class="bg-brown">
         <div class="container">
           <div class="direction">
             <div class="w-6 env-desc">
@@ -121,7 +121,7 @@
               <div class="env-apre-image">
                 <img
                   src="./image/apresentacion-765x765.jpg"
-                  class="img-fluid"
+                  class="image-fluid-contain"
                 />
               </div>
             </div>
@@ -129,7 +129,7 @@
         </div>
       </section>
 
-      <section>
+      <!-- <section>
         <div class="container">
           <div class="section-title">
             <h1 class="text-center color-brown">
@@ -183,9 +183,9 @@
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
-      <section class="bg-black">
+      <!-- <section class="bg-black">
         <div class="container">
           <div class="section-title">
             <h1 class="text-center color-brown">
