(refactor) sessão de recomendação

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
         </div>
       </section>
 
-      <!-- <section>
+      <section>
         <div class="container">
           <div class="section-title">
             <h1 class="text-center color-brown">
@@ -140,7 +140,7 @@
           <div class="direction">
             <div class="w-4 recommend-image">
               <div class="recommend-apre-image">
-                <img src="./image/01.jpg" class="img-fluid" alt="Imagem 01" />
+                <img src="./image/01.jpg" class="image-fluid-contain" alt="Imagem 01" />
               </div>
             </div>
             <div class="w-4 recommend-desc">
@@ -156,7 +156,7 @@
             </div>
             <div class="w-4 recommend-image">
               <div class="recommend-apre-image">
-                <img src="./image/01.jpg" class="img-fluid" alt="Imagem 02" />
+                <img src="./image/01.jpg" class="image-fluid-contain" alt="Imagem 02" />
               </div>
             </div>
           </div>
@@ -171,7 +171,7 @@
             </div>
             <div class="w-4 recommend-image">
               <div class="recommend-apre-image">
-                <img src="./image/01.jpg" class="img-fluid" alt="Imagem 03" />
+                <img src="./image/01.jpg" class="image-fluid-contain" alt="Imagem 03" />
               </div>
             </div>
             <div class="w-4 recommend-desc">
@@ -183,7 +183,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
 
       <!-- <section class="bg-black">
         <div class="container">
