(refactor) alteração nos card de consultoria

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
         </div>
       </section>
 
-      <!-- <section class="bg-black">
+      <section class="bg-black">
         <div class="container">
           <div class="section-title">
             <h1 class="text-center color-brown">
@@ -263,7 +263,7 @@
                 <div class="consult-image">
                   <img
                     class="image-fluid-contain"
-                    src="./image/pre-briefing.jpg"
+                    src="./image/delivery.jpg"
                   />
                 </div>
                 <h5 class="consult-title text-uppercase color-brown">
@@ -303,7 +303,7 @@
                 <div class="consult-image">
                   <img
                     class="image-fluid-contain"
-                    src="./image/pre-briefing.jpg"
+                    src="./image/result.jpg"
                   />
                 </div>
                 <h5 class="consult-title text-uppercase color-brown">
@@ -323,7 +323,7 @@
         </div>
       </section>
 
-      <section class="bg-brown">
+      <!-- <section class="bg-brown">
         <div class="container">
           <div class="row">
             <div class="col-lg-6 element-center">
