--- a/index.html
+++ b/index.html
@@ -54,7 +54,9 @@
               </div>
             </div>
             <div class="w-6 felt-desc">
-              <h1 class="color-brown text-uppercase">Você já se sentiu assim?</h1>
+              <h1 class="color-brown text-uppercase">
+                Você já se sentiu assim?
+              </h1>
               <p class="color-white">
                 Me sinto
                 <span class="text-uppercase font-italic font-bold">
@@ -84,7 +86,9 @@
                 >, pois preciso organizar o quarto para chegada do meu filho,
                 com soluções rápidas e práticas.
               </p>
-              <h2 class="color-brown text-uppercase">Então essa consultoria é para você!!!</h2>
+              <h2 class="color-brown text-uppercase">
+                Então essa consultoria é para você!!!
+              </h2>
               <a class="btn btn-brown animation-pulse" href="#"
                 >Faça agora sua consultoria</a
               >
@@ -140,7 +144,11 @@
           <div class="direction">
             <div class="w-4 recommend-image">
               <div class="recommend-apre-image">
-                <img src="./image/01.jpg" class="image-fluid-contain" alt="Imagem 01" />
+                <img
+                  src="./image/01.jpg"
+                  class="image-fluid-contain"
+                  alt="Imagem 01"
+                />
               </div>
             </div>
             <div class="w-4 recommend-desc">
@@ -156,7 +164,11 @@
             </div>
             <div class="w-4 recommend-image">
               <div class="recommend-apre-image">
-                <img src="./image/01.jpg" class="image-fluid-contain" alt="Imagem 02" />
+                <img
+                  src="./image/01.jpg"
+                  class="image-fluid-contain"
+                  alt="Imagem 02"
+                />
               </div>
             </div>
           </div>
@@ -171,7 +183,11 @@
             </div>
             <div class="w-4 recommend-image">
               <div class="recommend-apre-image">
-                <img src="./image/01.jpg" class="image-fluid-contain" alt="Imagem 03" />
+                <img
+                  src="./image/01.jpg"
+                  class="image-fluid-contain"
+                  alt="Imagem 03"
+                />
               </div>
             </div>
             <div class="w-4 recommend-desc">
@@ -219,30 +235,23 @@
             <div class="w-4 consul-colummn">
               <div class="consult-card">
                 <div class="consult-image">
-                  <img
-                    class="image-fluid-contain"
-                    src="./image/meeting.png"
-                  />
+                  <img class="image-fluid-contain" src="./image/meeting.png" />
                 </div>
                 <h5 class="consult-title text-uppercase color-brown">
                   2. REUNIÃO DE BRIEFING
                 </h5>
                 <p class="consult-text">
-                  Com base nas informações que coletamos, marcaremos uma
-                  reunião por vídeo chamada para conversarmos sobre suas
-                  necessidades e desejos para o ambiente. Além disso,
-                  forneceremos orientações sobre como tirar as medidas do
-                  espaço.
+                  Com base nas informações que coletamos, marcaremos uma reunião
+                  por vídeo chamada para conversarmos sobre suas necessidades e
+                  desejos para o ambiente. Além disso, forneceremos orientações
+                  sobre como tirar as medidas do espaço.
                 </p>
               </div>
             </div>
             <div class="w-4 consul-colummn">
               <div class="consult-card">
                 <div class="consult-image">
-                  <img
-                    class="image-fluid-contain"
-                    src="./image/creating.jpg"
-                  />
+                  <img class="image-fluid-contain" src="./image/creating.jpg" />
                 </div>
                 <h5 class="consult-title text-uppercase color-brown">
                   3. CRIAÇÃO
@@ -261,19 +270,16 @@
             <div class="w-4 consul-colummn">
               <div class="consult-card">
                 <div class="consult-image">
-                  <img
-                    class="image-fluid-contain"
-                    src="./image/delivery.jpg"
-                  />
+                  <img class="image-fluid-contain" src="./image/delivery.jpg" />
                 </div>
                 <h5 class="consult-title text-uppercase color-brown">
                   4.ENTREGA 1
                 </h5>
                 <p class="consult-text">
                   Hora da primeira entrega da sua consultoria. Durante essa
-                  fase, iremos apresentar o conceito, o layout ideal,
-                  moodboard e perspectivas em 3D realistas. Você tem o direito
-                  a uma revisão para garantir que o projeto atenda às suas
+                  fase, iremos apresentar o conceito, o layout ideal, moodboard
+                  e perspectivas em 3D realistas. Você tem o direito a uma
+                  revisão para garantir que o projeto atenda às suas
                   expectativas
                 </p>
               </div>
@@ -292,30 +298,27 @@
                 <p class="consult-text">
                   Após a aprovação da primeira etapa da consultoria, iremos
                   criar um Caderno de Consultoria em formato PDF. Este arquivo
-                  conterá todas as informações e especificações do seu
-                  ambiente, juntamente com uma lista de compras completa dos
-                  itens recomendados no seu projeto de consultoria.
+                  conterá todas as informações e especificações do seu ambiente,
+                  juntamente com uma lista de compras completa dos itens
+                  recomendados no seu projeto de consultoria.
                 </p>
               </div>
             </div>
             <div class="w-4 consul-colummn">
               <div class="consult-card">
                 <div class="consult-image">
-                  <img
-                    class="image-fluid-contain"
-                    src="./image/result.jpg"
-                  />
+                  <img class="image-fluid-contain" src="./image/result.jpg" />
                 </div>
                 <h5 class="consult-title text-uppercase color-brown">
                   6.HORA DA TRANSFORMAÇÃO
                 </h5>
                 <p class="consult-text">
-                  Chegou a hora de transformar seu sonho em realidade!
-                  Estaremos disponíveis para oferecer suporte online e
-                  responder quaisquer dúvidas durante a implementação da sua
-                  consultoria personalizada. Não se esqueça de compartilhar o
-                  processo conosco. Se precisar de ajuda, estamos aqui para
-                  ajudá-la a alcançar o resultado final que você deseja
+                  Chegou a hora de transformar seu sonho em realidade! Estaremos
+                  disponíveis para oferecer suporte online e responder quaisquer
+                  dúvidas durante a implementação da sua consultoria
+                  personalizada. Não se esqueça de compartilhar o processo
+                  conosco. Se precisar de ajuda, estamos aqui para ajudá-la a
+                  alcançar o resultado final que você deseja
                 </p>
               </div>
             </div>
@@ -323,45 +326,43 @@
         </div>
       </section>
 
-      <!-- <section class="bg-brown">
+      <section class="bg-brown">
         <div class="container">
-          <div class="row">
-            <div class="col-lg-6 element-center">
-              <div class="image-perfil">
+          <div class="direction">
+            <div class="w-6 perfil-image">
+              <div class="perfil-apre-image">
                 <img
                   class="image-fluid-contain"
                   src="./image/arquiteta-mayana-favacho-765x765.jpg"
                 />
               </div>
             </div>
-            <div class="col-lg-6 element-center">
-              <div class="element-column-center">
-                <h1 class="color-white mb-5">Oi prazer, sou Mayana Favacho</h1>
+            <div class="w-6 perfil-desc">
+              <h1 class="color-white">Oi prazer, sou Mayana Favacho</h1>
 
-                <p class="color-white text-justify">
-                  Se você busca um serviço de arquitetura de interiores que
-                  prioriza a praticidade e a funcionalidade, saiba que a nossa
-                  <span class="font-bold">
-                    Consultoria de Interiores é para você.
-                  </span>
-                </p>
+              <p class="color-white text-justify">
+                Se você busca um serviço de arquitetura de interiores que
+                prioriza a praticidade e a funcionalidade, saiba que a nossa
+                <span class="font-bold">
+                  Consultoria de Interiores é para você.
+                </span>
+              </p>
 
-                <p class="color-white text-justify">
-                  Nós indicamos o melhor layout para você e seu espaço, pintura,
-                  revestimento, decoração, móveis soltos e marcenaria básica.
-                </p>
+              <p class="color-white text-justify">
+                Nós indicamos o melhor layout para você e seu espaço, pintura,
+                revestimento, decoração, móveis soltos e marcenaria básica.
+              </p>
 
-                <p class="color-white text-justify">
-                  Na Consultoria não indicamos mudanças na infraestrutura, como
-                  demolições, ampliações e reformas complexas.
-                </p>
-              </div>
+              <p class="color-white text-justify">
+                Na Consultoria não indicamos mudanças na infraestrutura, como
+                demolições, ampliações e reformas complexas.
+              </p>
             </div>
           </div>
         </div>
       </section>
 
-      <section>
+      <!-- <section>
         <div class="container">
           <div
             class="d-flex flex-column justify-content-center align-items-center mb-5"
@@ -565,7 +566,7 @@
       </section> -->
     </main>
 
-    <!-- <div class="socia-group-floating">
+    <div class="socia-group-floating">
       <div class="round-button bg-instagram">
         <a
           class="sm-link"
@@ -584,7 +585,7 @@
           <i class="fa-brands fa-whatsapp"></i>
         </a>
       </div>
-    </div> -->
+    </div>
 
     <!-- <footer class="p-5 parallax">
       <div class="container">
