(feat) separação de css etapas da consultoria

--- a/index.html
+++ b/index.html
@@ -362,20 +362,17 @@
         </div>
       </section>
 
-      <!-- <section>
+      <section>
         <div class="container">
-          <div
-            class="d-flex flex-column justify-content-center align-items-center mb-5"
-          >
+          <div class="section-title">
             <h1 class="text-center color-brown">
               Veja a opinião de nossos clientes:
             </h1>
           </div>
-          <div class="row">
-            <div
-              class="col-lg-4 d-flex justify-content-center align-items-center"
-            >
-              <div class="image-deposition">
+
+          <div class="direction">
+            <div class="w-4 deposition-center">
+              <div class="deposition-image">
                 <img
                   class="image-fluid-contain"
                   src="./image/depoimentos/what.png-1-634x1024-1.png"
@@ -384,10 +381,8 @@
                 />
               </div>
             </div>
-            <div
-              class="col-lg-4 d-flex justify-content-center align-items-center"
-            >
-              <div class="image-deposition">
+            <div class="w-4 deposition-center">
+              <div class="deposition-image">
                 <img
                   class="image-fluid-contain"
                   src="./image/depoimentos/what.png-1-634x1024-2.png"
@@ -396,10 +391,8 @@
                 />
               </div>
             </div>
-            <div
-              class="col-lg-4 d-flex justify-content-center align-items-center"
-            >
-              <div class="image-deposition">
+            <div class="w-4 deposition-center">
+              <div class="deposition-image">
                 <img
                   class="image-fluid-contain"
                   src="./image/depoimentos/what.png-1-634x1024-3.png"
@@ -412,7 +405,7 @@
         </div>
       </section>
 
-      <section class="bg-black p-5">
+      <!-- <section class="bg-black p-5">
         <div class="container">
           <div
             class="d-flex flex-column justify-content-center align-items-center mb-5"
