--- a/index.html
+++ b/index.html
@@ -405,28 +405,25 @@
         </div>
       </section>
 
-      <!-- <section class="bg-black p-5">
+      <section class="bg-black p-5">
         <div class="container">
-          <div
-            class="d-flex flex-column justify-content-center align-items-center mb-5"
-          >
+          <div class="section-title">
             <h1 class="text-center color-red">Aviso Importante:</h1>
           </div>
-          <div class="row">
-            <div
-              class="col-lg-12 d-flex flex-column justify-content-center align-items-center"
-            >
-              <p class="font-size-20 text-center color-white">
+
+          <div class="direction">
+            <div class="w-12 warning">
+              <p class="text-center color-white">
                 Por não se tratar de um projeto arquitetônico completo, a
                 consultoria não indica paredes a serem demolidas ou construídas,
                 ou mudanças que necessitem de uma avaliação específica.
               </p>
-              <p class="font-size-20 text-center color-white">
+              <p class="text-center color-white">
                 Se o que você procura requer um projeto, informações técnicas de
                 arquitetura, então a consultoria não é o formato para sua
                 demanda.
               </p>
-              <p class="font-size-20 text-center color-white">
+              <p class="text-center color-white">
                 Entre em contato com nossa equipe através do botão do Whatsapp
                 na tela para conversarmos e alinharmos a melhor solução para
                 você, estamos à disposição!
@@ -436,7 +433,7 @@
         </div>
       </section>
 
-      <section class="bg-brown p-5">
+      <!-- <section class="bg-brown p-5">
         <div class="container">
           <div class="element-column-center mb-5">
             <h1 class="text-center color-white">Dúvidas frequentes</h1>
