(refactor) footer simples

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <!-- <link rel="stylesheet" href="./css/bootstrap.min.css" /> -->
+    <link rel="stylesheet" href="./css/bootstrap.min.css" />
     <link rel="stylesheet" href="./css/styles.css" />
     <title>Mayana Favacho - Consultoria Online</title>
   </head>
@@ -313,9 +313,8 @@
                   6.HORA DA TRANSFORMAÇÃO
                 </h5>
                 <p class="consult-text">
-                  Chegou a hora de transformar seu sonho em realidade! Estaremos
-                  disponíveis para oferecer suporte online e responder quaisquer
-                  dúvidas durante a implementação da sua consultoria
+                  Estaremos disponíveis para oferecer suporte online e responder
+                  quaisquer dúvidas durante a implementação da sua consultoria
                   personalizada. Não se esqueça de compartilhar o processo
                   conosco. Se precisar de ajuda, estamos aqui para ajudá-la a
                   alcançar o resultado final que você deseja
@@ -433,9 +432,9 @@
         </div>
       </section>
 
-      <!-- <section class="bg-brown p-5">
+      <section class="bg-brown p-5">
         <div class="container">
-          <div class="element-column-center mb-5">
+          <div class="section-title">
             <h1 class="text-center color-white">Dúvidas frequentes</h1>
           </div>
 
@@ -553,7 +552,7 @@
             </div>
           </div>
         </div>
-      </section> -->
+      </section>
     </main>
 
     <div class="socia-group-floating">
@@ -577,63 +576,24 @@
       </div>
     </div>
 
-    <!-- <footer class="p-5 parallax">
+    <footer class="p-5 parallax">
       <div class="container">
         <div
-          class="d-flex flex-column justify-content-center align-items-center"
+          class="contact"
         >
-          <div
-            class="d-flex flex-column justify-content-center align-items-center mb-5"
-          >
-            <h1 class="text-center index-1 color-brown">Contatos:</h1>
+          <div class="section-title index-1">
+            <h1 class="text-center color-white">Contatos:</h1>
           </div>
 
-          <form class="index-1 card-my mb-5" action="#" method="post">
-            <div class="mb-3">
-              <label for="nome" class="form-label color-white">Nome:</label>
-              <input
-                type="text"
-                class="form-control"
-                id="nome"
-                name="nome"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="email" class="form-label color-white">E-mail:</label>
-              <input
-                type="email"
-                class="form-control"
-                id="email"
-                name="email"
-                required
-              />
-            </div>
-            <div class="mb-3">
-              <label for="mensagem" class="form-label color-white"
-                >Mensagem:</label
-              >
-              <textarea
-                class="form-control"
-                id="mensagem"
-                name="mensagem"
-                rows="4"
-                required
-              ></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary btn-primary-brow">
-              Enviar Mensagem
-            </button>
-          </form>
-
-          <p class="color-white index-1 font-size-25">Telefone: 91 985517911</p>
-          <span class="color-white index-1 font-size-25"
+          <p class="text-center color-white index-1">Telefone: (91) 98551-7911</p>
+          <span class="text-center color-white index-1"
             >Copyright © <span id="currentYear"></span> – Todos os direitos
             reservados</span
           >
         </div>
       </div>
-    </footer> -->
+    </footer>
+  
 
     <script src="./js/bootstrap.min.js"></script>
     <script>
