(fix) correção de fontes para dispositivo menor que 576px

--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         </div>
       </section>
 
-      <section class="bg-black p-5">
+      <section class="bg-black">
         <div class="container">
           <div class="section-title">
             <h1 class="text-center color-red">Aviso Importante:</h1>
@@ -432,7 +432,7 @@
         </div>
       </section>
 
-      <section class="bg-brown p-5">
+      <section class="bg-brown">
         <div class="container">
           <div class="section-title">
             <h1 class="text-center color-white">Dúvidas frequentes</h1>
@@ -555,7 +555,7 @@
       </section>
     </main>
 
-    <div class="socia-group-floating">
+    <div class="socia-floating">
       <div class="round-button bg-instagram">
         <a
           class="sm-link"
@@ -576,7 +576,7 @@
       </div>
     </div>
 
-    <footer class="p-5 parallax">
+    <footer class="parallax">
       <div class="container">
         <div
           class="contact"
