adicionando planos de consulta

--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Transforme seus espaços com os melhores profissionais em arquitetura e design de interiores. Serviços especializados em arquitetura residencial, reformas e mais."
+    />
+    <meta
+      name="keywords"
+      content="arquiteto, arquiteta, design de interiores, arquitetura residencial, reformas"
+    />
+    <meta name="author" content="Mayana Favacho" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Google fonts-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -553,6 +562,68 @@
           </div>
         </div>
       </section>
+      <section>
+        <div class="container">
+          <div class="section-title">
+            <h1 class="text-center color-brown">
+              Garanta sua consultoria Online:
+            </h1>
+          </div>
+
+          <div class="direction">
+            <div class="w-6 consul-colummn">
+              <div class="consult-card consult-online consult-shadow">
+                <h5>POR AMBIENTE</h5>
+                <h2 class="color-brown">Consulotira Express</h2>
+                <ul>
+                  <li>Soluções Práticas de acordo com a suas necessidades;</li>
+                  <li>Reunião online para alinhamento;</li>
+                  <li>
+                    Planta de layout, com especificações e dimensões gerais;
+                  </li>
+                  <li>Perspectivas em 3D;</li>
+                  <li>
+                    Uma revisão, onde você pode fazer as alterações que desejar;
+                  </li>
+                  <li>
+                    Sugestões de materias, decoração e cores adequadaos para o
+                    seu estilo e ambiente;
+                  </li>
+                </ul>
+                <p>Prazo de entregaa: 10 dias úteis</p>
+                <p>Entrega Final: 7 dias úteis</p>
+                <h4 class="color-brown">Acompanhamento a pos a entrega</h4>
+                <a class="btn btn-brown consult-btn" href="#">Solicite a sua consultoria</a>
+              </div>
+            </div>
+            <div class="w-6 consul-colummn">
+              <div class="consult-card consult-online consult-shadow">
+                <h5>POR AMBIENTE</h5>
+                <h2 class="color-brown">Consulotira Express</h2>
+                <ul>
+                  <li>Soluções Práticas de acordo com a suas necessidades;</li>
+                  <li>Reunião online para alinhamento;</li>
+                  <li>
+                    Planta de layout, com especificações e dimensões gerais;
+                  </li>
+                  <li>Perspectivas em 3D;</li>
+                  <li>
+                    Uma revisão, onde você pode fazer as alterações que desejar;
+                  </li>
+                  <li>
+                    Sugestões de materias, decoração e cores adequadaos para o
+                    seu estilo e ambiente;
+                  </li>
+                </ul>
+                <p>Prazo de entregaa: 10 dias úteis</p>
+                <p>Entrega Final: 7 dias úteis</p>
+                <h4 class="color-brown">Acompanhamento a pos a entrega</h4>
+                <a class="btn btn-brown consult-btn" href="#">Solicite a sua consultoria</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <div class="socia-floating">
@@ -578,14 +649,14 @@
 
     <footer class="parallax">
       <div class="container">
-        <div
-          class="contact"
-        >
+        <div class="contact">
           <div class="section-title index-1">
             <h1 class="text-center color-white">Contatos:</h1>
           </div>
 
-          <p class="text-center color-white index-1">Telefone: (91) 98551-7911</p>
+          <p class="text-center color-white index-1">
+            Telefone: (91) 98551-7911
+          </p>
           <span class="text-center color-white index-1"
             >Copyright © <span id="currentYear"></span> – Todos os direitos
             reservados</span
@@ -593,7 +664,6 @@
         </div>
       </div>
     </footer>
-  
 
     <script src="./js/bootstrap.min.js"></script>
     <script>
